alterações nos caminhos dos aqrquivos

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
 
 
-    <script src="/typewriting-master/typewriting.js"></script>
+    <script src="./typewriting-master/typewriting.js"></script>
 </body>
 
 </html>
