--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
     
                     <ul class = "social-links">
                         <li>
-                            <a href = "#" class = "flex">
+                            <a href = "https://www.instagram.com/iagoabraantes/" class = "flex">
                                 <i class = "fab fa-instagram"></i>
                             </a>
                         </li>
                         <li>
-                            <a href = "#" class = "flex">
+                            <a href = "https://www.linkedin.com/in/iago-aruajo-dos-santos" class = "flex">
                                 <i class = "fab fa-linkedin"></i>
                             </a>
                         </li>
