--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
     <header id="header" class="vh-100 flex">
         <header id = "header" class = "vh-100 flex">
-            <div class = "containerDoHeader">
+            <div class = "container">
                 <div class = "header-content">
                     <h1>Eu sou um <br><span class = "typewrite" data-loop = "yes" data-speed = "100" data-delay = "2000" data-words = '["programador", "fotógrafo por hobby", "flamenguista"]'></span></h1>
                     <h3>Iago Abrantes</h3>
