alterações no css

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <header id = "header" class = "vh-100 flex">
             <div class = "container">
                 <div class = "header-content">
-                    <h1>Eu sou um <br><span class = "typewrite" data-loop = "yes" data-speed = "100" data-delay = "2000" data-words = '["programador", "fotógrafo por hobby", "flamenguista"]'></span></h1>
+                    <h1>Eu sou<br><span class = "typewrite" data-loop = "yes" data-speed = "100" data-delay = "2000" data-words = '["Programador", "Fotógrafo", "Voluntário"]'></span></h1>
                     <h3>Iago Abrantes</h3>
     
                     <ul class = "social-links">
