--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         <header id = "header" class = "vh-100 flex">
             <div class = "container">
                 <div class = "header-content">
-                    <h1>Eu sou<br><span class = "typewrite" data-loop = "yes" data-speed = "100" data-delay = "2000" data-words = '["Programador", "Fotógrafo", "Voluntário"]'></span></h1>
-                    <h3>Iago Abrantes</h3>
+                    <h1>Eu sou<br><span class = "typewrite" data-loop = "yes" data-speed = "100" data-delay = "2000" data-words = '["Developer", "Fotógrafo", "Voluntário"]'></span></h1>
+                    <h3>Iago Abrantes</h3>                                                                                           
     
                     <ul class = "social-links">
                         <li>
